--- a/packages/ui/docs/osui/package.json
+++ b/packages/ui/docs/osui/package.json
@@ -40,7 +40,7 @@
         "@storybook/react": "^6.0.26",
         "@types/classnames": "^2.2.10",
         "@types/react-dom": "^16.9.8",
-        "antd": "^4.7.0",
+        "antd": "^4.9.2",
         "babel-loader": "^8.1.0",
         "cpy-cli": "^3.1.1",
         "husky": "^4.2.5",
@@ -51,7 +51,7 @@
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
-        "antd": ">=4.4.0",
+        "antd": "4.4.0 - 4.9.2",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
     },
