--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -34,7 +34,7 @@
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
-        "antd": ">=4.4.0",
+        "antd": "4.4.0 - 4.9.2",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
     },
