--- a/packages/ui/table/package.json
+++ b/packages/ui/table/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/table",
-    "version": "0.8.7",
+    "version": "0.8.8",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -66,7 +66,7 @@
         }
     },
     "dependencies": {
-        "@osui/pagination": "0.8.7",
+        "@osui/pagination": "^0.8.8",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
