--- a/packages/ui/pagination/package.json
+++ b/packages/ui/pagination/package.json
@@ -66,6 +66,7 @@
         }
     },
     "dependencies": {
+        "@osui/button": "^0.8.5",
         "@osui/icons": "^0.8.6",
         "classnames": "^2.2.6"
     },
