--- a/examples/reskript/my-app/ci.yml
+++ b/examples/reskript/my-app/ci.yml
@@ -1,13 +1,20 @@
 Global:
-  tool: build_submitter
+  version: 2.0
 
 Default:
   profile: [build]
 
 Profiles:
-
   - profile:
     name: build
-    env: cmc_standard
-    command: sh scripts/build.sh
-    release: true
+    mode: AGENT
+    environment:
+      image: DECK_CENTOS7U5_K3
+    build:
+      command: export USER='ferry' && export DEPLOY_ENV=$DEPLOY_ENV && export NODE_ENV=production && sh ./scripts/build.sh --build-target=stable
+      cache:
+        enable: true
+        paths:
+          - node_modules
+    artifacts:
+      release: true
