--- a/examples/reskript/my-app/package.json
+++ b/examples/reskript/my-app/package.json
@@ -11,39 +11,48 @@
     "lint": "skr lint"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "ssh://zhanglili01@icode.baidu.com:8235/baidu/ee-fe/fe-init"
   },
   "author": "zhanglili01",
   "license": "UNLICENSED",
   "dependencies": {
-    "@ecomfe/react-track": "^1.6.0",
-    "@osui/icloud-theme": "^0.6.3",
-    "@osui/icons": "^0.4.1",
-    "@osui/theme": "^0.6.3",
-    "@osui/ui": "^0.6.5",
-    "antd": "^4.5.4",
-    "axios": "^0.19.0",
-    "classnames": "^2.2.6",
-    "lodash": "^4.17.19",
-    "moment": "^2.27.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "@ecomfe/react-track": "^2.0.2",
+    "@ecomfe/svg-mixed-loader": "^1.0.0",
+    "@osui/icloud-theme": "^0.9.16",
+    "@osui/ui": "^0.8.33",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@types/react-router-dom": "^5.1.6",
+    "lodash": "^4.17.20",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
     "reset-css": "^5.0.1",
     "uri-templates": "^0.2.0"
   },
   "devDependencies": {
-    "@baidu/reskript-plugins": "^0.16.5",
-    "@reskript/cli": "^0.9.0",
-    "@reskript/cli-build": "^0.10.5",
-    "@reskript/cli-dev": "^0.9.9",
-    "@reskript/cli-lint": "^0.9.9",
-    "@reskript/config-lint": "^0.12.3",
-    "husky": "^4.2.5",
-    "webpack": "^4.43.0"
+    "@baidu/reskript-plugins": "^1.0.0-beta.5",
+    "@reskript/cli": "^1.0.0-beta.21",
+    "@reskript/cli-build": "^1.0.0-beta.21",
+    "@reskript/cli-dev": "^1.0.0-beta.21",
+    "@reskript/cli-lint": "^1.0.0-beta.21",
+    "@reskript/config-lint": "^1.0.0-beta.21",
+    "@types/lodash": "^4.14.165",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.12",
+    "@types/uri-templates": "^0.1.30",
+    "eslint": "^7.15.0",
+    "husky": "^4.3.6",
+    "stylelint": "^13.8.0",
+    "typescript": "^4.1.3",
+    "webpack": "^5.10.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "skr lint --staged"
+    }
   }
 }
