--- a/packages/ui/drawer/package.json
+++ b/packages/ui/drawer/package.json
@@ -29,7 +29,7 @@
         "@reskript/cli-lint": "^0.9.9",
         "@reskript/config-babel": "^0.9.0",
         "@reskript/config-lint": "^0.12.3",
-        "@reskript/config-webpack": "0.11.2",
+        "@reskript/config-webpack": "^0.11.2",
         "@storybook/addon-a11y": "^6.0.26",
         "@storybook/addon-docs": "^6.0.26",
         "@storybook/addon-storysource": "^6.0.26",
