--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -123,6 +123,7 @@
         "@osui/tree-select": "^0.10.0",
         "@osui/typography": "^0.10.0",
         "@osui/upload": "^0.10.0",
+        "@osui/version": "0.10.0",
         "classnames": "^2.2.6",
         "github-markdown-css": "^4.0.0",
         "lodash.partial": "^4.2.1",
