--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "commit": "git-cz",
         "new-component": "sh scripts/new-component.sh",
         "copy-to-docs": "sh scripts/copy-to-docs.sh",
-        "publish": "lerna publish from-package",
+        "publish": "lerna publish from-package && yarn build-docs",
         "build-docs": "sh scripts/build-docs.sh osui && sh scripts/build-docs.sh icloud"
     },
     "devDependencies": {
