--- a/packages/ui-theme/osui-theme/package.json
+++ b/packages/ui-theme/osui-theme/package.json
@@ -50,5 +50,8 @@
     "access": "public",
     "registry": "https://registry.npmjs.com"
   },
-  "gitHead": "904178b6c0bb86963017122daa529580decb66e8"
+  "gitHead": "904178b6c0bb86963017122daa529580decb66e8",
+  "dependencies": {
+    "@osui/icons": "^0.10.1"
+  }
 }
