--- a/packages/ui-theme/icloud-theme/package.json
+++ b/packages/ui-theme/icloud-theme/package.json
@@ -52,6 +52,6 @@
   },
   "gitHead": "904178b6c0bb86963017122daa529580decb66e8",
   "dependencies": {
-    "@osui/icons": "^0.11.0"
+    "@osui/icons-icloud": "^0.11.0"
   }
 }
