--- a/packages/ui/brand-provider/package.json
+++ b/packages/ui/brand-provider/package.json
@@ -69,5 +69,8 @@
     "publishConfig": {
         "access": "public",
         "registry": "https://registry.npmjs.com"
+    },
+    "dependencies": {
+        "@osui/empty": "^0.11.2"
     }
 }
