--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -84,6 +84,7 @@
         "@osui/image": "^0.11.0",
         "@osui/input": "^0.11.2",
         "@osui/input-number": "^0.11.3",
+        "@osui/joyride": "0.10.0",
         "@osui/layout": "^0.11.0",
         "@osui/list": "^0.11.0",
         "@osui/markdown": "^0.11.0",
