--- a/packages/ui/auto-complete/package.json
+++ b/packages/ui/auto-complete/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/auto-complete",
-    "version": "0.11.0",
+    "version": "0.11.1",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -72,6 +72,6 @@
     },
     "dependencies": {
         "@huse/derived-state": "^1.0.3",
-        "@osui/highlight-text": "0.10.0"
+        "@osui/highlight-text": "^0.10.1"
     }
 }
