--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/ui",
-    "version": "0.11.10",
+    "version": "0.11.11",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -53,12 +53,12 @@
         "@osui/affix": "^0.11.0",
         "@osui/alert": "^0.11.0",
         "@osui/anchor": "^0.11.0",
-        "@osui/auto-complete": "^0.11.0",
+        "@osui/auto-complete": "^0.11.1",
         "@osui/avatar": "^0.11.0",
         "@osui/back-top": "^0.11.0",
         "@osui/badge": "^0.11.0",
         "@osui/branch-dropdown": "^0.11.4",
-        "@osui/brand-provider": "^0.11.3",
+        "@osui/brand-provider": "^0.11.4",
         "@osui/breadcrumb": "^0.11.1",
         "@osui/button": "^0.11.3",
         "@osui/calendar": "^0.11.0",
@@ -67,7 +67,7 @@
         "@osui/cascader": "^0.11.0",
         "@osui/checkbox": "^0.11.2",
         "@osui/col": "^0.11.0",
-        "@osui/collapse": "^0.11.3",
+        "@osui/collapse": "^0.11.4",
         "@osui/comment": "^0.11.0",
         "@osui/config-provider": "^0.11.0",
         "@osui/date-picker": "^0.11.0",
@@ -76,16 +76,16 @@
         "@osui/divider": "^0.11.0",
         "@osui/drawer": "^0.11.0",
         "@osui/dropdown": "^0.11.0",
-        "@osui/empty": "^0.11.2",
+        "@osui/empty": "^0.11.3",
         "@osui/flex-centered": "^0.11.0",
-        "@osui/form": "^0.11.4",
-        "@osui/gap": "^0.11.3",
+        "@osui/form": "^0.11.5",
+        "@osui/gap": "^0.11.4",
         "@osui/grid": "^0.11.0",
-        "@osui/highlight-text": "0.10.0",
+        "@osui/highlight-text": "^0.10.1",
         "@osui/image": "^0.11.0",
-        "@osui/input": "^0.11.2",
+        "@osui/input": "^0.11.3",
         "@osui/input-number": "^0.11.3",
-        "@osui/joyride": "^0.11.0",
+        "@osui/joyride": "^0.11.1",
         "@osui/layout": "^0.11.0",
         "@osui/list": "^0.11.0",
         "@osui/markdown": "^0.11.0",
