--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
     "packages": [
         "packages/*"
     ],
-    "version": "independent",
+    "version": "0.11.0",
     "npmClient": "yarn",
     "useWorkspaces": true,
     "command": {
