--- a/packages/ui/button/package.json
+++ b/packages/ui/button/package.json
@@ -66,6 +66,7 @@
         }
     },
     "dependencies": {
+        "@osui/tooltip": "^0.12.0",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
