--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -51,7 +51,7 @@
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
-        "antd": "4.4.0 - 4.15.0",
+        "antd": ">=4.4.0 <4.16.0",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
     },
