--- a/packages/ui/highlight-text/package.json
+++ b/packages/ui/highlight-text/package.json
@@ -52,7 +52,7 @@
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
-        "antd": "4.4.0 - 4.9.2",
+        "antd": ">=4.4.0 <4.16.0",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
     },
