--- a/packages/ui-theme/icloud-theme/package.json
+++ b/packages/ui-theme/icloud-theme/package.json
@@ -2,11 +2,12 @@
   "name": "@osui/icloud-theme",
   "version": "0.12.6",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/theme/index.js",
+  "module": "dist/theme/index.js",
+  "types": "dist/theme/index.d.ts",
   "scripts": {
     "lint": "skr lint",
-    "build": "node scripts/build.js && sh scripts/build.sh",
+    "build": "sh scripts/build.sh",
     "prepack": "yarn build",
     "storybook": "start-storybook -p 8700",
     "clean": "rm -rf node_modules && rm -rf dist",
@@ -35,7 +36,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.6"
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "antd": ">=3.0.0"
