--- a/packages/ui/tree-select/package.json
+++ b/packages/ui/tree-select/package.json
@@ -36,6 +36,7 @@
         "@storybook/client-api": "^6.0.26",
         "@storybook/react": "^6.0.26",
         "@types/classnames": "^2.2.10",
+        "@types/hoist-non-react-statics": "^3.3.1",
         "@types/react-dom": "^16.9.8",
         "antd": "^4.15.0",
         "babel-loader": "^8.1.0",
@@ -68,5 +69,8 @@
     "publishConfig": {
         "access": "public",
         "registry": "https://registry.npmjs.com"
+    },
+    "dependencies": {
+        "hoist-non-react-statics": "^3.3.2"
     }
 }
