--- a/packages/ui/date-picker/package.json
+++ b/packages/ui/date-picker/package.json
@@ -68,7 +68,8 @@
         }
     },
     "dependencies": {
-        "classnames": "^2.2.6"
+        "classnames": "^2.2.6",
+        "hoist-non-react-statics": "^3.3.2"
     },
     "publishConfig": {
         "access": "public",
