--- a/packages/ui/tabs/package.json
+++ b/packages/ui/tabs/package.json
@@ -71,5 +71,8 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "904178b6c0bb86963017122daa529580decb66e8"
+    "gitHead": "904178b6c0bb86963017122daa529580decb66e8",
+    "dependencies": {
+        "hoist-non-react-statics": "^3.3.2"
+    }
 }
