--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/ui",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -54,29 +54,29 @@
         "@osui/affix": "^1.0.0",
         "@osui/alert": "^1.0.0",
         "@osui/anchor": "^1.0.0",
-        "@osui/auto-complete": "^1.0.0",
+        "@osui/auto-complete": "^1.0.1",
         "@osui/avatar": "^1.0.0",
         "@osui/back-top": "^1.0.0",
         "@osui/badge": "^1.0.0",
-        "@osui/branch-dropdown": "^1.0.0",
+        "@osui/branch-dropdown": "^1.0.1",
         "@osui/brand-provider": "^1.0.0",
         "@osui/breadcrumb": "^1.0.0",
-        "@osui/button": "^1.0.0",
+        "@osui/button": "^1.0.1",
         "@osui/calendar": "^1.0.0",
         "@osui/card": "^1.0.0",
         "@osui/carousel": "^1.0.0",
         "@osui/cascader": "^1.0.0",
         "@osui/checkbox": "^1.0.0",
         "@osui/col": "^1.0.0",
-        "@osui/collapse": "^1.0.0",
+        "@osui/collapse": "^1.0.1",
         "@osui/comment": "^1.0.0",
         "@osui/config-provider": "^1.0.0",
-        "@osui/date-picker": "^1.0.0",
+        "@osui/date-picker": "^1.0.1",
         "@osui/descriptions": "^1.0.0",
         "@osui/directory-navigator": "^1.0.0",
         "@osui/divider": "^1.0.0",
         "@osui/drawer": "^1.0.0",
-        "@osui/dropdown": "^1.0.0",
+        "@osui/dropdown": "^1.0.1",
         "@osui/empty": "^1.0.0",
         "@osui/flex-centered": "^1.0.0",
         "@osui/form": "^1.0.0",
@@ -84,7 +84,7 @@
         "@osui/grid": "^1.0.0",
         "@osui/highlight-text": "^1.0.0",
         "@osui/image": "^1.0.0",
-        "@osui/input": "^1.0.0",
+        "@osui/input": "^1.0.1",
         "@osui/input-number": "^1.0.0",
         "@osui/joyride": "^1.0.0",
         "@osui/layout": "^1.0.0",
@@ -92,22 +92,22 @@
         "@osui/markdown": "^1.0.0",
         "@osui/mentions": "^1.0.0",
         "@osui/menu": "^1.0.0",
-        "@osui/menu-dropdown": "^1.0.0",
+        "@osui/menu-dropdown": "^1.0.1",
         "@osui/message": "^1.0.0",
-        "@osui/modal": "^1.0.0",
+        "@osui/modal": "^1.0.1",
         "@osui/notification": "^1.0.0",
         "@osui/page-header": "^1.0.0",
-        "@osui/pagination": "^1.0.0",
+        "@osui/pagination": "^1.0.1",
         "@osui/popconfirm": "^1.0.0",
         "@osui/popover": "^1.0.0",
         "@osui/progress": "^1.0.0",
-        "@osui/quick-edit": "1.0.0",
+        "@osui/quick-edit": "^1.0.1",
         "@osui/radio": "^1.0.0",
-        "@osui/rate": "^1.0.0",
+        "@osui/rate": "^1.0.1",
         "@osui/result": "^1.0.0",
         "@osui/row": "^1.0.0",
         "@osui/search-select-list": "^1.0.0",
-        "@osui/select": "^1.0.0",
+        "@osui/select": "^1.0.1",
         "@osui/skeleton": "^1.0.0",
         "@osui/slider": "^1.0.0",
         "@osui/space": "^1.0.0",
@@ -115,8 +115,8 @@
         "@osui/statistic": "^1.0.0",
         "@osui/steps": "^1.0.0",
         "@osui/switch": "^1.0.0",
-        "@osui/table": "^1.0.0",
-        "@osui/tabs": "^1.0.0",
+        "@osui/table": "^1.0.1",
+        "@osui/tabs": "^1.0.1",
         "@osui/tag": "^1.0.0",
         "@osui/text-overflow-tooltip": "^1.0.0",
         "@osui/time-picker": "^1.0.0",
@@ -125,7 +125,7 @@
         "@osui/tooltip": "^1.0.0",
         "@osui/transfer": "^1.0.0",
         "@osui/tree": "^1.0.0",
-        "@osui/tree-select": "^1.0.0",
+        "@osui/tree-select": "^1.0.1",
         "@osui/typography": "^1.0.0",
         "@osui/upload": "^1.0.0",
         "@osui/version": "^1.0.0",
