--- a/packages/ui/message/package.json
+++ b/packages/ui/message/package.json
@@ -64,6 +64,7 @@
     "author": "huoyuxuan,liushaozhen",
     "license": "MIT",
     "dependencies": {
+        "@huse/timeout": "^1.1.0",
         "@osui/alert": "^1.0.0",
         "classnames": "^2.2.6",
         "lodash.partial": "^4.2.1"
