--- a/examples/reskript/package.json
+++ b/examples/reskript/package.json
@@ -20,6 +20,7 @@
     "@ecomfe/react-track": "^3.0.1",
     "@osui/button": "^1.0.0-beta.1",
     "@osui/icloud-theme": "^1.0.0-beta.1",
+    "@osui/ui": "^1.0.9",
     "antd": "^4.15.6",
     "axios-interface": "^1.3.2",
     "lodash": "^4.17.21",
@@ -30,11 +31,11 @@
   },
   "devDependencies": {
     "@baidu/reskript-plugins": "^1.0.1",
-    "@reskript/cli": "^1.1.0",
-    "@reskript/cli-build": "^1.1.0",
-    "@reskript/cli-dev": "^1.1.0",
-    "@reskript/cli-lint": "^1.1.0",
-    "@reskript/config-lint": "^1.1.0",
+    "@reskript/cli": "^1.11.1",
+    "@reskript/cli-build": "^1.11.1",
+    "@reskript/cli-dev": "^1.11.1",
+    "@reskript/cli-lint": "^1.11.1",
+    "@reskript/config-lint": "^1.11.1",
     "@types/lodash": "^4.14.165",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
@@ -43,7 +44,7 @@
     "husky": "^4.3.8",
     "stylelint": "^13.12.0",
     "typescript": "^4.2.3",
-    "webpack": "^5.30.0"
+    "webpack": "^5.46.0"
   },
   "husky": {
     "hooks": {
