--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -43,7 +43,7 @@
         "@types/jest": "^26.0.24",
         "@types/react-dom": "^16.9.8",
         "@types/react-test-renderer": "^17.0.1",
-        "antd": "^4.16.9",
+        "antd": "^4.16.10",
         "babel-loader": "^8.1.0",
         "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
@@ -55,6 +55,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-is": "^16.13.1",
+        "react-omni-link": "^2.1.1",
         "react-router-dom": "^5.2.0",
         "react-test-renderer": "^17.0.2",
         "ts-jest": "^27.0.3",
