--- a/packages/ui/highlight-text/package.json
+++ b/packages/ui/highlight-text/package.json
@@ -26,6 +26,7 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@huse/input-value": "^1.1.1",
         "@reskript/cli": "^0.9.0",
         "@reskript/cli-lint": "^0.9.9",
         "@reskript/config-babel": "^0.9.0",
@@ -43,7 +44,7 @@
         "@types/jest": "^26.0.24",
         "@types/react-dom": "^16.9.8",
         "@types/react-test-renderer": "^17.0.1",
-        "antd": "^4.16.9",
+        "antd": "^4.16.10",
         "babel-loader": "^8.1.0",
         "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
