--- a/packages/ui/time-picker/package.json
+++ b/packages/ui/time-picker/package.json
@@ -83,5 +83,9 @@
     "publishConfig": {
         "access": "public",
         "registry": "https://registry.npmjs.com"
+    },
+    "dependencies": {
+        "classnames": "^2.3.1",
+        "hoist-non-react-statics": "^3.3.2"
     }
 }
