--- a/packages/ui/table/package.json
+++ b/packages/ui/table/package.json
@@ -85,6 +85,7 @@
     "dependencies": {
         "@osui/button": "^1.2.26",
         "@osui/pagination": "^2.0.10",
+        "@osui/spin": "^2.0.14",
         "classnames": "^2.2.6",
         "hoist-non-react-statics": "^3.3.2",
         "lodash": "^4.17.21",
