--- a/package.json
+++ b/package.json
@@ -28,39 +28,39 @@
         "prepare": "husky install"
     },
     "devDependencies": {
-        "@ant-design/tools": "^14.0.0-alpha.3",
-        "@babel/core": "^7.10.5",
-        "@commitlint/cli": "^9.1.1",
-        "@commitlint/config-conventional": "^9.1.1",
-        "@emotion/babel-preset-css-prop": "^11.2.0",
-        "@osui/icons": "^2.1.0",
-        "@osui/icons-icloud": "^2.1.0",
-        "@reskript/cli": "^2.2.2",
-        "@reskript/cli-lint": "^2.2.2",
-        "@storybook/cli": "^6.0.26",
+        "@ant-design/tools": "^14.1.0",
+        "@babel/core": "^7.18.10",
+        "@commitlint/cli": "^9.1.2",
+        "@commitlint/config-conventional": "^9.1.2",
+        "@emotion/babel-preset-css-prop": "^11.10.0",
+        "@osui/icons": "workspace:^2.1.9",
+        "@osui/icons-icloud": "workspace:^2.1.9",
+        "@reskript/cli": "^2.5.4",
+        "@reskript/cli-lint": "^2.5.4",
+        "@storybook/cli": "^6.5.10",
         "@types/css": "^0.0.33",
         "@types/less": "^3.0.3",
-        "commitizen": "^4.1.2",
+        "commitizen": "^4.2.5",
         "css": "^3.0.0",
-        "cz-conventional-changelog": "^3.2.0",
+        "cz-conventional-changelog": "^3.3.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "enzyme-to-json": "^3.6.2",
-        "eslint-plugin-import": "^2.24.0",
-        "husky": "^8.0.0",
-        "jest": "^27.2.1",
+        "eslint-plugin-import": "^2.26.0",
+        "husky": "^8.0.1",
+        "jest": "^27.5.1",
         "lerna": "^3.22.1",
-        "less": "^4.1.2",
+        "less": "^4.1.3",
         "less-vars-to-js": "^1.3.0",
         "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
         "mockdate": "^3.0.5",
-        "moment": "^2.29.1",
+        "moment": "^2.29.4",
         "require-from-string": "^2.0.2",
         "rimraf": "^3.0.2",
         "styled-components": "~5.3.5",
         "stylelint-config-rational-order": "^0.1.2",
-        "typescript": "^4.4.3",
-        "webpack": "^5.52.1"
+        "typescript": "^4.7.4",
+        "webpack": "^5.74.0"
     },
     "config": {
         "commitizen": {
