--- a/packages/ui/select/package.json
+++ b/packages/ui/select/package.json
@@ -57,6 +57,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
         "lodash": "^4.17.21",
+        "lodash.difference": "^4.5.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
